<resources>
    <string name="app_name">XCriticalTestApp</string>
    <string name="email">E-mail</string>
    <string name="email_hint">Введите e-mail</string>
    <string name="email_error">Неверный e-mail</string>
    <string name="password">Пароль</string>
    <string name="password_hint">Введите пароль</string>
    <string name="password_error">Неверный пароль</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="button_login">Войти</string>
    <string name="button_registration">Зарегистрироваться</string>
    <string name="button_send_recover_password_email">Восстановить пароль</string>
    <string name="logo_description">XCritical logo</string>
    <string name="bottom_menu_projects">Проекты</string>
    <string name="bottom_menu_gallery">Галерея</string>
    <string name="mobile_icon_description">Mobile icon, meaning the project is saved locally</string>
    <string name="arrow_icon_description">Arrow icon, indicates that we can click on project item</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="fab_description">Create new project</string>
    <string name="save_project">Сохранить</string>
    <string name="header">Заголовок</string>
    <string name="scenario_body">Текст сценария</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>