<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_900"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="129dp"
        android:layout_height="90dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_frame" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top">

        <LinearLayout
            android:id="@+id/linearLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:gravity="start"
                android:text="@string/email"
                android:textColor="@color/grey_300"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="false"
                android:textColor="@color/grey_300"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:paddingBottom="5sp"
                android:text="@string/email_error"
                android:textColor="@color/red_400"
                android:textSize="12sp"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:gravity="start"
                android:text="@string/password"
                android:textColor="@color/grey_300"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/grey_300"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:text="@string/password_error"
                android:textColor="@color/red_400"
                android:textSize="12sp"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5sp"
                android:paddingBottom="40sp"
                android:text="@string/forgot_password"
                android:textColor="@color/indigo_300" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@drawable/button_round_corners"
                android:backgroundTint="@color/deep_purple_400"
                android:text="@string/button_login"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round_corners"
                android:backgroundTint="@color/dark_blue_900"
                android:text="@string/button_registration"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/textViewChangeBroker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:text="@string/change_broker"
                android:textColor="@color/indigo_300" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>