<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_900"
    tools:context=".RecoverPasswordActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="129dp"
        android:layout_height="90dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_frame" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top2">

        <LinearLayout
            android:id="@+id/linearLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:gravity="start"
                android:text="@string/email"
                android:textColor="@color/grey_300"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="false"
                android:textColor="@color/grey_300"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:paddingBottom="5sp"
                android:text="@string/email_error"
                android:textColor="@color/red_400"
                android:textSize="12sp"
                android:visibility="invisible" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonRecoverPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:background="@drawable/button_round_corners"
            android:backgroundTint="@color/deep_purple_400"
            android:text="@string/button_send_recover_password_email"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>